Fix added missing env vars to .env.example

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ CMC_API_TOKEN=""
 SCREENSHOT_API_TOKEN=""
 OWM_API_TOKEN=""
 DB_URL=""
+DB_NAME=""
+DB_USER=""
+DB_PASSWORD=""
 WEBHOOK_FLAG=""
 
 # Remove if used locally
