Fix: docker-compose failing to start bot
Updated Dockerfile, docker-compose.yaml.
Updated env variables in .env.example.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Environment variables
+# Bot env variables
 DEBUG_FLAG=""
 BOT_TOKEN=""
 OWNER_ID=""
@@ -6,12 +6,14 @@ TESTER_ID=""
 CMC_API_TOKEN=""
 SCREENSHOT_API_TOKEN=""
 OWM_API_TOKEN=""
-DB_URL=""
-DB_NAME=""
+
+# DB env variables
 DB_USER=""
 DB_PASSWORD=""
-WEBHOOK_FLAG=""
+DB_PORT=""
+DB_NAME=""
 
-# Remove if used locally
-BOT_LINK=""
-PORT=""
+# This is currently unsupported for use on Heroku
+WEBHOOK_FLAG=0
+# BOT_LINK=""
+# PORT=""
