--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-beautifulsoup4
-lxml
-psycopg2-binary
-python-dateutil
-python-telegram-bot==13.15
-pytz
-requests
-
-SQLAlchemy
-alembic
+alembic==1.9.4
+beautifulsoup4==4.11.2
+lxml==4.9.2
+psycopg2-binary==2.9.5
+python-dateutil==2.8.2
+python-telegram-bot==20.1
+pytz==2022.7.1
+requests==2.28.2
+SQLAlchemy==2.0.4
