Change: test deploy to Heroku

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,9 @@ DB_PASSWORD=""
 DB_PORT=""
 DB_NAME=""
 
-# This is currently unsupported for use on Heroku
+# Enables webhooks if 1
 WEBHOOK_FLAG=0
-# BOT_LINK=""
-# PORT=""
+
+# For use on Heroku
+BOT_LINK=""
+PORT=""
