--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ loguru~=0.6.0
 lxml==4.9.2
 psycopg2-binary==2.9.5
 python-dateutil==2.8.2
-python-telegram-bot==20.1
+# python-telegram-bot==20.1 # if not webhooks used
+python-telegram-bot[webhooks] # for webhooks
 pytz==2022.7.1
 requests==2.28.2
 SQLAlchemy==2.0.4
