Update: .env.example fix

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ TESTER_ID=""
 CMC_API_TOKEN=""
 SCREENSHOT_API_TOKEN=""
 OWM_API_TOKEN=""
+GITHUB_TOKEN=""
+
+DEVELOPER_GH_PROFILE=""
+BOT_GH_REPO=""
 
 # DB env variables
 DB_USER=""
