--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,31 @@
-alembic==1.9.4
+aiolimiter==1.1.0
+alembic==1.12.0
 anyio==4.0.0
-asyncpg==0.27.0
-beautifulsoup4==4.11.2
+APScheduler==3.10.4
+asyncpg==0.28.0
+beautifulsoup4==4.12.2
+cachetools==5.3.1
 certifi==2023.7.22
-charset-normalizer==3.2.0
+charset-normalizer==3.3.0
 greenlet==2.0.2
 h11==0.14.0
-httpcore==0.17.3
-httpx==0.24.1
+httpcore==0.18.0
+httpx==0.25.0
 idna==3.4
-loguru==0.6.0
-lxml==4.9.2
+loguru==0.7.2
+lxml==4.9.3
 Mako==1.2.4
 MarkupSafe==2.1.3
-psycopg2-binary==2.9.5
+psycopg2-binary==2.9.8
 python-dateutil==2.8.2
 python-telegram-bot==20.5
-pytz==2022.7.1
-requests==2.28.2
+pytz==2023.3.post1
+requests==2.31.0
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
-SQLAlchemy==2.0.4
+SQLAlchemy==2.0.21
 tornado==6.3.3
 typing_extensions==4.8.0
-urllib3==1.26.16
+tzlocal==5.0.1
+urllib3==2.0.5
