--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,11 @@
 DEBUG_FLAG=""
 BOT_TOKEN=""
 OWNER_ID=""
-TESTER_ID=""
 CMC_API_TOKEN=""
 SCREENSHOT_API_TOKEN=""
 OWM_API_TOKEN=""
-GITHUB_TOKEN=""
+BINANCE_API_TOKEN=""
+BINANCE_API_PRIVAT_TOKEN=""
 
 DEVELOPER_GH_PROFILE=""
 BOT_GH_REPO=""
