Update: messages look, little fixes of service file

--- a/tg_bot.service
+++ b/tg_bot.service
@@ -12,7 +12,7 @@ User=root
 RestartSec=2
 # Replace with your docker-compose path and also path to your docker-composae.yaml file
 ExecStart=/...your_path.../docker-compose -f /...your_path.../Yakov_tg_bot/docker-compose.yaml up -d
-ExecStop=/...your_path.../docker-compose -f /...your_path.../Yakov_tg_bot/docker-compose.yaml down
+ExecStop=/...your_path.../docker-compose -f /...your_path.../Yakov_tg_bot/docker-compose.yaml stop
 
 [Install]
 WantedBy=multi-user.target
